<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:id="@+id/menu_items">
        <item android:id="@+id/action_previous"
            android:title="@string/action_previous"
            android:icon="@drawable/ic_action_previous_item"
            app:showAsAction="always" />
        <item android:id="@+id/action_next"
            android:title="@string/action_next"
            android:icon="@drawable/ic_action_next_item"
            app:showAsAction="always" />
        <item android:id="@+id/action_calculate"
            android:title="@string/action_calculate"
            android:icon="@drawable/ic_action_refresh"
            app:showAsAction="ifRoom" />
        <item android:id="@+id/action_about"
            android:title="@string/action_about"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>
